// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Renders with size '1' 1`] = `
<label
  className="label__Test__root label__Test--hasInput switch__Test__root switch__Test---size-1-1"
>
  <span
    className="label__Test__text"
  >
    Switch label
  </span>
  <span
    className="switch__Test__inputContainer"
  >
    <input
      checked={false}
      className="switch__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="switch"
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Switch Renders with size '2' 1`] = `
<label
  className="label__Test__root label__Test--hasInput switch__Test__root switch__Test---size-1-2"
>
  <span
    className="label__Test__text"
  >
    Switch label
  </span>
  <span
    className="switch__Test__inputContainer"
  >
    <input
      checked={false}
      className="switch__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="switch"
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Switch Renders with size '3' 1`] = `
<label
  className="label__Test__root label__Test--hasInput switch__Test__root switch__Test---size-1-3"
>
  <span
    className="label__Test__text"
  >
    Switch label
  </span>
  <span
    className="switch__Test__inputContainer"
  >
    <input
      checked={false}
      className="switch__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="switch"
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Switch Renders with size '4' 1`] = `
<label
  className="label__Test__root label__Test--hasInput switch__Test__root switch__Test---size-1-4"
>
  <span
    className="label__Test__text"
  >
    Switch label
  </span>
  <span
    className="switch__Test__inputContainer"
  >
    <input
      checked={false}
      className="switch__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="switch"
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Switch Renders with size '5' 1`] = `
<label
  className="label__Test__root label__Test--hasInput switch__Test__root switch__Test---size-1-6"
>
  <span
    className="label__Test__text"
  >
    Switch label
  </span>
  <span
    className="switch__Test__inputContainer"
  >
    <input
      checked={false}
      className="switch__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="switch"
      type="checkbox"
    />
  </span>
</label>
`;

exports[`Switch renders correctly with label 1`] = `
<label
  className="label__Test__root label__Test--hasInput switch__Test__root switch__Test---size-1-1"
>
  <span
    className="label__Test__text"
  >
    Label
  </span>
  <span
    className="switch__Test__inputContainer"
  >
    <input
      checked={false}
      className="switch__Test__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="switch"
      type="checkbox"
    />
  </span>
</label>
`;
